[gd_scene load_steps=5 format=3 uid="uid://dfejb5j0367kj"]

[ext_resource type="Script" path="res://scripts/levels/level_6.gd" id="1_kutv1"]
[ext_resource type="PackedScene" uid="uid://cst3b75p1mfpc" path="res://prefabs/world_environment.tscn" id="2_r212p"]
[ext_resource type="PackedScene" uid="uid://slug5iqsl8ee" path="res://prefabs/snake_board.tscn" id="3_uhedp"]
[ext_resource type="PackedScene" uid="uid://cj8ebg2ro6kbg" path="res://prefabs/Tanks/pivot_tank.tscn" id="5_knlp3"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_kutv1")

[node name="WorldEnvironment" parent="." instance=ExtResource("2_r212p")]

[node name="SnakeBoard" parent="." instance=ExtResource("3_uhedp")]
unique_name_in_owner = true
position = Vector2(224, 192)

[node name="ColorRect2" type="ColorRect" parent="SnakeBoard"]
visible = false
offset_right = 544.0
offset_bottom = 680.0
color = Color(1, 0, 1, 0.0196078)

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1000.0
offset_bottom = 1000.0
mouse_filter = 2
color = Color(0, 0.0627451, 0, 1)
metadata/_edit_lock_ = true

[node name="PivotTank" parent="." instance=ExtResource("5_knlp3")]
unique_name_in_owner = true
position = Vector2(256, 232)
rotation = -0.785398

[node name="PivotTank2" parent="." instance=ExtResource("5_knlp3")]
unique_name_in_owner = true
position = Vector2(472, 608)
rotation = 2.35619

[node name="PivotTank3" parent="." instance=ExtResource("5_knlp3")]
unique_name_in_owner = true
position = Vector2(408, 728)
rotation = 2.35619

[node name="PivotTank4" parent="." instance=ExtResource("5_knlp3")]
unique_name_in_owner = true
position = Vector2(736, 232)
rotation = 0.785398

[node name="PivotTank5" parent="." instance=ExtResource("5_knlp3")]
unique_name_in_owner = true
position = Vector2(520, 608)
rotation = -2.35619

[node name="PivotTank6" parent="." instance=ExtResource("5_knlp3")]
unique_name_in_owner = true
position = Vector2(584, 728)
rotation = -2.35619
